<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/item_recipe_card_CV"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/dp8"
    android:elevation="@dimen/dp4"
    app:cardCornerRadius="@dimen/dp4">

    <TextView
        android:id="@+id/item_recipe_card_title_TV"
        style="@style/Recipe"
        android:minHeight="120dp"
        android:padding="@dimen/dp4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:gravity="center"
        tools:text="Nutela Pie" />
</androidx.cardview.widget.CardView>