...
            android:id="@+id/exo_repeat_toggle"
            style="@style/ExoMediaButton"
            android:visibility="gone"
            android:tint="@color/colorAccent" />

        <ImageButton
            android:id="@+id/exo_play"
            style="@style/ExoMediaButton.Play"
            android:tint="@color/colorAccent" />

        <ImageButton
            android:id="@+id/exo_pause"
            style="@style/ExoMediaButton.Pause"
            android:tint="@color/colorAccent" />

        <ImageButton
            android:id="@+id/exo_ffwd"

...
